# dxvk

./: DX8_FIXED_PIPELINE_ANALYSIS.md
dx8-bgfx-renderer/: CMakeLists.txt  README.md
dx8-bgfx-renderer/examples/: CMakeLists.txt  alpha_blend.cpp  basic_cube.cpp  fog_demo.cpp  lighting_demo.cpp  multitexture.cpp  stencil_mirror.cpp
dx8-bgfx-renderer/include/dx8bgfx/: dx8_buffer_utils.h  dx8_caps.h  dx8_constants.h  dx8_cube_texture.h  dx8_debug.h  dx8_fog_utils.h  dx8_math.h  dx8_point_sprite.h  dx8_renderer.h  dx8_sampler_utils.h  dx8_shader_binary.h  dx8_shader_cache.h  dx8_shader_compiler.h  dx8_shader_generator.h  dx8_shader_key.h  dx8_sprite_batch.h  dx8_state_manager.h  dx8_stencil_utils.h  dx8_texture_utils.h  dx8_types.h  dx8_uniform_manager.h  dx8_vertex_processing.h  dx8_volume_texture.h  dx8bgfx.h
dx8-bgfx-renderer/shaders/fs/: fs_fixed_function.sc
dx8-bgfx-renderer/shaders/varying/: varying.def.sc
dx8-bgfx-renderer/shaders/vs/: vs_fixed_function.sc
dx8-bgfx-renderer/src/buffer/: dx8_buffer_utils.cpp
dx8-bgfx-renderer/src/core/: dx8_caps.cpp  dx8_renderer.cpp  dx8_types.cpp  dx8_uniform_manager.cpp
dx8-bgfx-renderer/src/debug/: dx8_debug.cpp
dx8-bgfx-renderer/src/render/: dx8_point_sprite.cpp
dx8-bgfx-renderer/src/shader/: dx8_shader_binary.cpp  dx8_shader_cache.cpp  dx8_shader_compiler.cpp  dx8_shader_generator.cpp  dx8_shader_key.cpp
dx8-bgfx-renderer/src/sprite/: dx8_sprite_batch.cpp
dx8-bgfx-renderer/src/state/: dx8_fog_utils.cpp  dx8_state_manager.cpp  dx8_stencil_utils.cpp
dx8-bgfx-renderer/src/texture/: dx8_cube_texture.cpp  dx8_sampler_utils.cpp  dx8_texture_utils.cpp  dx8_volume_texture.cpp
dx8-bgfx-renderer/src/vertex/: dx8_vertex_processing.cpp
